--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,108 @@
     transform: rotate(360deg);
   }
 }
+.head{
+  width: 100%;
+  height: 40px;
+  background-color: black;
+  position: fixed;
+  top: 0;
+ 
+  
+
+}
+.title{
+  color: azure;
+  font-weight: bolder;
+  margin-left: 20px;
+  margin-top: 20px;
+  display: flex;
+}
+.mode{
+  text-align: right;
+  margin-left: 1050px;
+  
+}
+.menu{
+ text-align: right;
+ margin-left: 1200px;
+ position: fixed;
+ 
+}
+.banner{
+  width: 100%;
+  background-color: #000000;
+  padding: 0;
+  top: 0;
+ 
+
+}
+.img{
+  text-align: right;
+  padding-bottom: 160px;
+
+}
+.text{
+  color: rgb(245, 245, 245);
+  padding-top: 80px;
+  font-size: larger;
+  position: absolute;
+  margin-left: 240px;
+  margin-top: 120px;
+}
+.txt1{
+  color: rgb(17, 206, 17);
+  font-size: larger;
+  font-weight: bolder;
+
+}
+.txt2{
+  font-size: smaller;
+}
+.txt3{
+  
+  color: rgb(245, 245, 245);
+  padding-top: 80px;
+  position: absolute;
+  margin-left: -5%;
+  margin-top: 260px;
+  transform: rotate(269deg);
+  font-size: smaller;
+  text-decoration: none;
+
+ 
+}
+/* Light mode styles */
+.head.light-mode {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+/* Dark mode styles */
+.head.dark-mode {
+  background-color: #000000;
+  color: #ffffff;
+}
+/* Light mode styles */
+.ban1.light-mode {
+  background-color: #ffffff;
+  color: #000000;
+}
+
+/* Dark mode styles */
+.ban1.dark-mode {
+  background-color: #000000;
+  color: #ffffff;
+}
+.btn{
+  background-color: #000000;
+  color: white;
+  border: 1px  solid white;
+  margin-left: 5px;
+}
+.git{
+  transform: rotate(90deg);
+
+}
+
+
